<resources>
    <string name="app_name" translatable="false">My Finances</string>
    <string name="fabAddOperationContentDescription">Add operation</string>
    <string name="menu_operations">Operations</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_users">Users</string>
    <string name="menu_catalogs">Catalogs</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_recipients">Recipients</string>
    <string name="menu_receipts">Receipts</string>
    <string name="menu_main">Main</string>
    <string name="menu_analytics">Analytics</string>

    <!-- Account types -->
    <string name="account_type_cash">Cash</string>
    <string name="account_type_bank">Bank account</string>
    <string name="account_type_card">Card</string>

    <!-- Card types -->
    <string name="card_type_american_express" translatable="false">AMERICAN EXPRESS</string>
    <string name="card_type_discover" translatable="false">DISCOVER</string>
    <string name="card_type_google_wallet" translatable="false">GOOGLE WALLET</string>
    <string name="card_type_jcb" translatable="false">JCB</string>
    <string name="card_type_maestro" translatable="false">MAESTRO</string>
    <string name="card_type_mastercard" translatable="false">MASTERCARD</string>
    <string name="card_type_paypal" translatable="false">PAYPAL</string>
    <string name="card_type_unionpay" translatable="false">UNIONPAY</string>
    <string name="card_type_visa" translatable="false">VISA</string>
    <string name="card_type_yandex_money">YANDEX MONEY</string>
    <string name="card_type_mir">MIR</string>

    <!-- Transaction categories -->
    <!-- Income -->
    <string name="transaction_category_start_balance">Start balance</string>
    <string name="transaction_category_salary">Salary</string>
    <string name="transaction_category_prepayment">Prepayment</string>

    <!-- Expense -->
    <string name="transaction_category_auto">Auto</string>
    <string name="transaction_category_gas_station">Gas station</string>
    <string name="transaction_category_auto_service">Auto service</string>

    <string name="transaction_category_health_beauty">Health and beauty</string>
    <string name="transaction_category_pharmacy">Pharmacy</string>

    <string name="transaction_category_payments">Payments</string>
    <string name="transaction_category_mobile_banking">Mobile banking</string>
    <string name="transaction_category_repayment_on_credit">Repayment on credit</string>
    <string name="transaction_category_commission">Commission</string>
    <string name="transaction_category_public_services_payments">Public service payments</string>
    <string name="transaction_category_electric_power">Electric power</string>
    <string name="transaction_category_home_phone">Home phone</string>
    <string name="transaction_category_rent">Rent</string>
    <string name="transaction_category_intercom">Intercom</string>
    <string name="transaction_category_heating">Heating</string>
    <string name="transaction_category_communication_internet">Communication, internet</string>
    <string name="transaction_category_mobile">Mobile</string>
    <string name="transaction_category_wired_internet">Wired internet</string>

    <string name="transaction_category_rest_and_entertainment">Rest and entertainment</string>
    <string name="transaction_category_cinema">Cinema</string>
    <string name="transaction_category_restaurant_and_cafe">Restaurant and cafe</string>

    <string name="transaction_category_all_for_home">All for home</string>

    <string name="transaction_category_transport">Transport</string>

    <string name="transaction_category_education">Education</string>

    <string name="transaction_category_clothes_and_accessories">Clothes and accessories</string>

    <string name="transaction_category_supermarket">Supermarket</string>

    <string name="transaction_category_other_expenses">Other expenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="splash_app_name" translatable="false">My Finances [v %s]</string>
    <string name="menu_bottomappbar_settings">Settings</string>
    <string name="menu_bottomappbar_transactions_filter">Filter</string>

    <!-- Preference Titles -->
    <string name="main_header">Main</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_title">Default theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_time">Time</string>
    <string name="date_time_caption"><![CDATA[Date & time]]></string>
    <string name="EditingSubtitle">Editing</string>
    <string name="AddingSubtitle">Adding</string>

    <string name="addOperationFragmentLabel">Operation</string>
    <string name="addAccountFragmentLabel">Account</string>
    <string name="settingsFragmentLabel">Settings</string>
    <string name="menu_sms_messages">SMS messages</string>
    <string name="account_selector_caption">Select account</string>
    <string name="operation_type_selector_caption">Select operation type</string>
    <string name="operation_type_income_expence">Income/Expence</string>
    <string name="operation_type_transfer">Transfer</string>
    <string name="operation_sum_caption">Operation sum</string>
    <string name="account_receiver_selector_caption">Select receiver account</string>
    <string name="operation_sum_hint">Sum</string>
    <string name="operation_category_selector_caption">Select operation category</string>
    <string name="operation_recipient_payer_selector_caption">Operation recipient/payer</string>
    <string name="operation_ricipient_payer_hint">Recipient/payer</string>

</resources>