<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item android:title="@string/menu_main">
            <menu>
                <item
                    android:id="@+id/menu_accounts"
                    android:icon="@drawable/ic_twotone_account_balance_wallet_24"
                    android:title="@string/menu_accounts" />
                <item
                    android:id="@+id/menu_operations"
                    android:icon="@drawable/ic_twotone_payments_24"
                    android:title="@string/menu_operations" />
            </menu>
        </item>
        <item android:title="@string/menu_users">
            <menu>
                <item
                    android:id="@+id/menu_users"
                    android:icon="@drawable/ic_twotone_supervised_user_circle_24"
                    android:title="@string/menu_users" />
            </menu>
        </item>
    </group>
    <item android:title="@string/menu_catalogs">
        <menu>
            <item
                android:id="@+id/menu_categories"
                android:icon="@drawable/ic_twotone_assignment_24"
                android:title="@string/menu_categories" />
            <item
                android:id="@+id/menu_recipients"
                android:icon="@drawable/ic_twotone_monetization_on_24"
                android:title="@string/menu_recipients" />
            <item
                android:id="@+id/menu_receipts"
                android:icon="@drawable/ic_twotone_receipt_long_24"
                android:title="@string/menu_receipts" />
        </menu>
    </item>
    <item android:title="@string/menu_analytics">
        <menu>
            <item
                android:id="@+id/menu_analytics"
                android:icon="@drawable/ic_twotone_analytics_24"
                android:title="@string/menu_analytics" />
        </menu>
    </item>
</menu>